quick fix for led gif on safari

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -697,3 +697,6 @@ c {
   align-content: center;
 }
 
+.led {
+  height: 91vh;
+}
